[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels/Signs/EndSign/EndSign.gd" type="Script" id=1]
[ext_resource path="res://assets/Sound/mixkit.co/mixkit-retro-game-notification-212.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/Sprites/sign_poster.png" type="Texture" id=3]
[ext_resource path="res://assets/Sound/mixkit.co/mixkit-animated-small-group-applause-523.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 32 )

[node name="EndSign" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="MinimumPresentsBarrier" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MinimumPresentsBarrier"]
position = Vector2( 8, -16 )
shape = SubResource( 2 )

[node name="NextLevelUnlockedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="LevelEndSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0

[connection signal="body_entered" from="Area2D" to="." method="_onPlayerReached"]
